update first time

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Change your WEBSITE TITLE HERE-->
-    <title>Edward's template</title>
+    <title>Huirong Zhou's info</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="main.css" />
     <!-- <script src="index.js"></script> -->
@@ -13,15 +13,15 @@
         <div class="text-intro">
             <div class="intro">
                 <!-- Here's the Big title and the subtitle on the left on the main page -->
-                <h1>XXX's Island</h1>
-                <h2>Type your subtitle here</h2>
+                <h1>Zhou Huirong's Space</h1>
+                <h2>A little bit about my life</h2>
             </div>
             <div class="author">
                 <!-- Here's some basic information, you can add more <p></p> or delete any from below -->
-                <h3>Author: XXX</h3>
-                <p>I love python</p>
-                <p>I love econometrics</p>
-                <p>I love C++</p>
+                <h3>周慧荣 现就读于BNU应用统计专业数据科学与管理方向</h3>
+                <p>Current M1 student of Applied Statistics in data science era, Beijing Normal University</p>
+                <p>Bachelor in Statistics</p>
+        
             </div>
         </div>
         <div class="container">
@@ -34,7 +34,7 @@
                     <h3>Data Science</h3>
                     <div class="hov">
                         <!-- The subtitle -->
-                        <p>Professional experiences and research experiences of data science</p>
+                        <p>Research experiences of data science</p>
                         <!-- Link to the subpage-->
                         <a href="./pages/ds_page/index.html">Read More</a>
                     </div>
@@ -44,11 +44,11 @@
             <div class="card">
                 <div class="content">
                     <h2></h2>
-                    <h3>Game Design</h3>
+                    <h3>Statistics</h3>
                     <div class="hov">
-                        <p>Professional experiences in game industry</p>
+                        <p>Statistics analysis research and other experiences</p>
                         <!-- Link to the subpage-->
-                        <a href="./pages/game_page/index.html">Read More</a>
+                        <a href="./pages/sa_page/index.html">Read More</a>
                     </div>
                 </div>
             </div>
