repair goto link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h2></h2>
                     <h3>Statistics</h3>
                     <div class="hov">
-                        <p>Statistics analysis research and other experiences</p>
+                        <p>Statistical analysis research and other experiences</p>
                         <!-- Link to the subpage-->
                         <a href="./pages/sa_page/index.html">Read More</a>
                     </div>
