--- a/pages/ds_page/index.html
+++ b/pages/ds_page/index.html
@@ -101,19 +101,20 @@
                         <h1>Language</h1>
                         <h2>TOFEL 97 marks, GRE  322 marks                 
                         </p>
+                    </div>
+                    <hr />
+                </div>
+                <div class="return">
+                    <div class="btn ds_to_home">
+                        <a href="../../index.html">
+                            <h2>Return</h2>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="return">
-            <div class="btn ds_to_home">
-                <a href="../../index.html">
-                    <h2>Return</h2>
-                </a>
-            </div>
-        </div>
-        <script>
-            // Initialize with 'Professional' content displayed
-            showContent('professional');
-        </script>
-    </body>
-</html>
+            <script>
+                // Initialize with 'Professional' content displayed
+                showContent('competition');
+            </script>
+        </body>
+    </html>
