--- a/pages/sa_page/index.html
+++ b/pages/sa_page/index.html
@@ -93,18 +93,16 @@
                     <p>Served as a language volunteer, assisting international guests during the 2019 Basketball World Cup.</p>
                 </div>
             </div>
-            
-        </div>
-        <div class="return">
-            <div class="btn ds_to_home">
-                <a href="../../index.html">
-                    <h2>Return</h2>
-                </a>
+            <div class="return">
+                <div class="btn ds_to_home">
+                    <a href="../../index.html">
+                        <h2>Return</h2>
+                    </a>
+                </div>
             </div>
-        </div>
-        <script>
-            // Initialize with 'Professional' content displayed
-            showContent('professional');
-        </script>
-    </body>
-</html>
+            <script>
+                // Initialize with 'Professional' content displayed
+                showContent('research');
+            </script>
+        </body>
+    </html>
