--- a/pages/ds_page/index.html
+++ b/pages/ds_page/index.html
@@ -117,25 +117,23 @@
             <!-- Detailed information of the third category -->
             <div class="right_present_inschool content">
                 <div class="card">
-                    <div class="card">
-                        <h1>Programming</h1>
-                        <h2>Python, R, SQL, Stata, SAS
-                        </p>
+                    <h1>Programming</h1>
+                    <h2> </h2>
+                    <p>Python, R, SQL, Stata, SAS</p>
+                <hr /> <!-- Horizontal line separator -->
                     </div>
                 <div class="card">
-                    <div class="card">
-                        <h1>Language</h1>
-                        <h2>TOFEL 97 marks, GRE  322 marks                 
-                        </p>
+                    <h1>Language</h1>
+                    <h2> </h2>
+                    <p>TOFEL 97 marks, GRE  322 marks </p>              
+                <hr /> <!-- Horizontal line separator -->
                     </div>
-                    <hr />
                 </div>
-                <div class="return">
-                    <div class="btn ds_to_home">
-                        <a href="../../index.html">
-                            <h2>Return</h2>
-                        </a>
-                    </div>
+            <div class="return">
+                <div class="btn ds_to_home">
+                    <a href="../../index.html">
+                        <h1>Return</h1>
+                    </a>
                 </div>
             </div>
             <script>
